--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "aos": "^2.3.4",
     "react-fast-marquee": "^1.6.1",
     "react-icons": "^4.11.0",
     "react-toastify": "^9.1.3",
